--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,8 @@ dependencies {
     implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
     /* implementation 'com.github.naya-aastra:SkewPdfView:1.1'
     implementation 'es.voghdev.pdfviewpager:library:1.0.6'*/
+    implementation 'com.github.mohammadatif:Animatoo:master'
+    implementation 'com.razorpay:checkout:1.5.8'
 
 }
 apply plugin: 'com.google.gms.google-services'
