--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,8 @@ dependencies {
     implementation 'es.voghdev.pdfviewpager:library:1.0.6'*/
     implementation 'com.github.mohammadatif:Animatoo:master'
     implementation 'com.razorpay:checkout:1.5.8'
-
+    //HindMPPSC/app/HindMPPSC.jks
+    //HindMPPSC
+    //key0
 }
 apply plugin: 'com.google.gms.google-services'
